bynkc/tests/fixtures/positive/38_method_self_field_access/input.bynk
commons test {
  type Box = { value: Int }

  fn Box.doubled(self) -> Int {
    self.value * 2
  }

  fn use(b: Box) -> Int {
    b.doubled()
  }
}
