bynkc/tests/fixtures/negative/41_self_outside_method/input.bynk
commons test {
  fn bad(n: Int) -> Int {
    self
  }
}
